--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/rami-naim-36322a1b8/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
