--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>This is<br />
-						Rami Rami Khrais</h1>
+						Rami Khrais</h1>
 						<p>A New Diver in Data Ocean</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
