--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
+								<p>Jernbaneveien 39<br />
+								Stabekk, 1369</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
