--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</header>
 								<a href="./Projects/analysis.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check it Out</a></li>
+									<li><a href="./Projects/analysis.html" class="button large">Check it Out</a></li>
 								</ul>
 							</article>
 
