--- a/generic.html
+++ b/generic.html
@@ -97,6 +97,8 @@
 										theme(legend.text = element_text(size = 12, face = &quot;bold&quot;, colour = &quot;black&quot;)) +
 										labs(title = &quot;The Two Largest Players in the Market&quot;, subtitle = &quot;Daily Flights in a Month&quot;) + 
 										theme(plot.title = element_text(size = 15))</code></pre>
+
+										<img src="../ramikhrais.github.io/images/ImhofSwitzerlandPoster.jpg" alt="">
 							</section>
 
 					</div>
