--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">November 22, 2020</span>
+										<h2><a href="#">Analysis of Airlines Market in US<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -140,20 +140,21 @@
 								</article>
 							</section>
 
-						<!-- Footer -->
+						 <!-- Footer -->
+
 							<footer>
 								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
+									<a href="#" class="previous">Prev</a>
 									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
+									<!-- <a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+									<a href="#" class="next">Next</a> -->
+								</div> 
+							</footer> 
 
 					</div>
 
