--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<article>
 									<header>
 										<span class="date">November 22, 2020</span>
-										<h2><a href="#">Analysis of Airlines Market in US<br />
+										<h2><a href="./Projects/analysis-of-airlines-market-in-us.html">Analysis of Airlines Market in US<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
