--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 								<article>
 									<header>
 										<span class="date">November 22, 2020</span>
-										<h2><a href="./Projects/analysis-of-airlines-market-in-us.html">Analysis of Airlines Market in US<br />
+										<h2><a href="./generic.html">Analysis of Airlines Market in US<br />
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="./Projects/analysis-of-airlines-market-in-us.html" class="button">Check it Out</a></li>
+										<li><a href="./generic.html" class="button">Check it Out</a></li>
 									</ul>
 								</article>
 								<article>
