--- a/generic.html
+++ b/generic.html
@@ -54,7 +54,7 @@
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<h2>Data Overview</h2>
 								<p>Data Overview
-									The data that will be used in this analysis is extracted from built-in R dataset <pre><code>hflights</code></pre>. The dataset consists of 21 variables and 227,496 observations and it covers the activity of 15 carriers in United States in 2011.</p>
+									The data that will be used in this analysis is extracted from built-in R dataset <strong>hflights</strong>. The dataset consists of 21 variables and 227,496 observations and it covers the activity of 15 carriers in United States in 2011.</p>
 
 								<pre><code>## Observations: 227,496
 									## Variables: 21
