--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -57,6 +57,30 @@
 						<p>Data Overview
 							The data that will be used in this analysis is extracted from built-in R dataset <strong>hflights</strong>. The dataset consists of 21 variables and 227,496 observations and it covers the activity of 15 carriers in United States in 2011.</p>
 
+							<pre><code>## Observations: 227,496
+								## Variables: 21
+								## $ Year              &lt;int&gt; 2011, 2011, 2011, 2011, 2011, 2011, 2011, 20...
+								## $ Month             &lt;int&gt; 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,...
+								## $ DayofMonth        &lt;int&gt; 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 1...
+								## $ DayOfWeek         &lt;int&gt; 6, 7, 1, 2, 3, 4, 5, 6, 7, 1, 2, 3, 4, 5, 6,...
+								## $ DepTime           &lt;int&gt; 1400, 1401, 1352, 1403, 1405, 1359, 1359, 13...
+								## $ ArrTime           &lt;int&gt; 1500, 1501, 1502, 1513, 1507, 1503, 1509, 14...
+								## $ UniqueCarrier     &lt;chr&gt; &quot;AA&quot;, &quot;AA&quot;, &quot;AA&quot;, &quot;AA&quot;, &quot;AA&quot;, &quot;AA&quot;, &quot;AA&quot;, &quot;A...
+								## $ FlightNum         &lt;int&gt; 428, 428, 428, 428, 428, 428, 428, 428, 428,...
+								## $ TailNum           &lt;chr&gt; &quot;N576AA&quot;, &quot;N557AA&quot;, &quot;N541AA&quot;, &quot;N403AA&quot;, &quot;N49...
+								## $ ActualElapsedTime &lt;int&gt; 60, 60, 70, 70, 62, 64, 70, 59, 71, 70, 70, ...
+								## $ AirTime           &lt;int&gt; 40, 45, 48, 39, 44, 45, 43, 40, 41, 45, 42, ...
+								## $ ArrDelay          &lt;int&gt; -10, -9, -8, 3, -3, -7, -1, -16, 44, 43, 29,...
+								## $ DepDelay          &lt;int&gt; 0, 1, -8, 3, 5, -1, -1, -5, 43, 43, 29, 19, ...
+								## $ Origin            &lt;chr&gt; &quot;IAH&quot;, &quot;IAH&quot;, &quot;IAH&quot;, &quot;IAH&quot;, &quot;IAH&quot;, &quot;IAH&quot;, &quot;I...
+								## $ Dest              &lt;chr&gt; &quot;DFW&quot;, &quot;DFW&quot;, &quot;DFW&quot;, &quot;DFW&quot;, &quot;DFW&quot;, &quot;DFW&quot;, &quot;D...
+								## $ Distance          &lt;int&gt; 224, 224, 224, 224, 224, 224, 224, 224, 224,...
+								## $ TaxiIn            &lt;int&gt; 7, 6, 5, 9, 9, 6, 12, 7, 8, 6, 8, 4, 6, 5, 6...
+								## $ TaxiOut           &lt;int&gt; 13, 9, 17, 22, 9, 13, 15, 12, 22, 19, 20, 11...
+								## $ Cancelled         &lt;int&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...
+								## $ CancellationCode  &lt;chr&gt; &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, ...
+								## $ Diverted          &lt;int&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</code></pre>
+
 
 	
 </body>
