--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -81,6 +81,98 @@
 								## $ CancellationCode  &lt;chr&gt; &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, &quot;&quot;, ...
 								## $ Diverted          &lt;int&gt; 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</code></pre>
 
+								<pre><code>ggplot(two_largest_daily_month, aes(x= DayofMonth, y= flights, col= Carrier)) +
+									geom_line(size = 1.2) +
+									geom_point(size = 3.2, shape = 21, fill = &quot;white&quot;, stroke = 2.5) +
+									theme_minimal() + 
+									scale_colour_manual(values = c(&quot;firebrick1&quot;, &quot;goldenrod1&quot;)) + 
+									scale_x_continuous(breaks = 1:30, limits = c(0, 30)) + 
+									scale_y_continuous(limits = c(2000, 2600), breaks = c(2000, 2100, 2200, 2300, 2400, 2500, 2600), labels = scales :: comma) +
+									ylab(&quot;Number of Flights&quot;) +
+									theme(panel.grid.major.x = element_blank()) + 
+									theme(panel.grid.minor.x = element_blank()) +
+									theme(axis.text.x = element_text(size = 10, colour = &quot;black&quot;)) +
+									theme(axis.text.y = element_text(size = 10, colour = &quot;black&quot;)) +
+									theme(axis.title.x = element_blank()) +
+									theme(axis.title.y = element_text(size= 14, margin = margin(r =20))) + 
+									theme(legend.position = &quot;bottom&quot;) + 
+									theme(legend.title = element_blank()) + 
+									theme(legend.text = element_text(size = 12, face = &quot;bold&quot;, colour = &quot;black&quot;)) +
+									labs(title = &quot;The Two Largest Players in the Market&quot;, subtitle = &quot;Daily Flights in a Month&quot;) + 
+									theme(plot.title = element_text(size = 15))</code></pre>
+
+					</section>
+
+				</div>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<!-- <section>
+							<form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
+									</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form>
+						</section>
+						<section class="split contact">
+							<section class="alt">
+								<h3>Address</h3>
+								<p>1234 Somewhere Road #87257<br />
+								Nashville, TN 00000-0000</p>
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a href="#">(000) 000-0000</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">info@untitled.tld</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section> -->
+					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="./assets/js/highlight.pack.js"></script>
+			<script>hljs.initHighlightingOnLoad();</script>
+
+
 
 	
 </body>
