--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 
 
 
-<html lang="en">
+<html>
 <head>
+	<title>Analysis</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="../assets/css/main.css">
 	<link rel="stylesheet" href="../assets/css/obsidian.css">
 	<noscript><link rel="stylesheet" href="../assets/css/noscript.css"></noscript>
-	<title>Analysis</title>
 </head>
 <body class="is-preload">
 
