--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -4,7 +4,7 @@
 
 <html>
 <head>
-	<title>Analysis</title>
+	<title>Analysis of Airlines Market in US</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="../assets/css/main.css">
