--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -7,7 +7,7 @@
 	<title>Analysis of Airlines Market in US</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="../assets/css/main.css" />
+	<link rel="stylesheet" href="main.css" />
 	<link rel="stylesheet" href="../assets/css/obsidian.css">
 	<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
   </head>
