--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -95,7 +95,7 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="./assets/js/highlight.pack.js"></script>
-			<script>hljs.initHighlightingOnLoad();</script>
+			<!-- <script>hljs.initHighlightingOnLoad();</script> -->
 
 	</body>
 </html>
