--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -87,15 +87,15 @@
 
 
 					<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="./assets/js/highlight.pack.js"></script>
-			<!-- <script>hljs.initHighlightingOnLoad();</script> -->
+			<script src="../assets/js/jquery.min.js"></script>
+			<script src="../assets/js/jquery.scrollex.min.js"></script>
+			<script src="../assets/js/jquery.scrolly.min.js"></script>
+			<script src="../assets/js/browser.min.js"></script>
+			<script src="../assets/js/breakpoints.min.js"></script>
+			<script src="../assets/js/util.js"></script>
+			<script src="../assets/js/main.js"></script>
+			<script src="../assets/js/highlight.pack.js"></script>
+			<script>hljs.initHighlightingOnLoad();</script>
 
 	</body>
 </html>
