--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -55,7 +55,7 @@
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<h2>Data Overview</h2>
-								<p>Data Overview
+								<p>
 									The data that will be used in this analysis is extracted from built-in R dataset <strong>hflights</strong>. The dataset consists of 21 variables and 227,496 observations and it covers the activity of 15 carriers in United States in 2011.</p>
 
 									<h2>What is next?</h1>
@@ -167,6 +167,26 @@
 										## 13 JetBlue                677
 										## 14 Alaska                 365
 										## 15 Mesa                    78</code></pre>
+
+									<pre><code>highest <- c("two", rep("one", 14))
+
+										ggplot(market_snapshot, aes(x = reorder(Carrier, flights), y = flights)) + 
+										  geom_bar(stat = "identity", aes(fill = highest)) + 
+										  scale_fill_manual(values = c("#F98866","#FF420E")) + coord_flip() +
+										  geom_text(aes(y= flights, x = seq(15,1), label = paste0(round(flights),"")), nudge_y = 4700, color="black", size = 5) + 
+										  theme_minimal() +
+										  theme(axis.title.x = element_blank(),
+												axis.title.y = element_blank(),
+												axis.text.x = element_blank(),
+												axis.text.y = element_text(size = 11, colour = "black", face = "bold"),
+												legend.position = "None",
+												panel.background = element_blank(),
+												panel.grid = element_blank(),
+												plot.title = element_text(size = 16, margin = margin(0,0,20,0))) + 
+										  labs(title = "The Most Active Carriers in 2011", 
+											   caption = "Source: hflights")</code></pre>
+
+										<img src="../images/hflights-carriers-dominant.png" alt="">
 								
 
 
