--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -187,6 +187,10 @@
 											   caption = "Source: hflights")</code></pre>
 
 										<img src="../images/hflights-carriers-dominant.png" alt="">
+
+										<p>It seems that <strong>ExpressJet</strong> along with <strong>Continental</strong> have the lion’s share of the number of flights. We can go much deeper now and examine the performance of both carriers within different time ranges</p>
+
+										<h2>How do ExpressJet and Continental perform daily within one week?</h2>
 								
 
 
