--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -48,9 +48,9 @@
 									<span class="date">November 20, 2020</span>
 									<h1>Analysis of Airlines Market in US<br />
 									</h1>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+
+									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. The datasets that has been analysed is oncerning 15 carriers</p>
+									
 
 								</header>
 								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
