--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -49,7 +49,7 @@
 									<h1>Analysis of Airlines Market in US<br />
 									</h1>
 
-									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. The datasets that has been analysed is oncerning 15 carriers</p>
+									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. <br> The datasets that has been analysed is oncerning 15 carriers</p> <br>
 									
 
 								</header>
