--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h2><a href="./Projects/analysis-of-airlines-market-in-us.html">Analysis of Airlines Market in US<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/average-delay-departure.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/analysis-of-airlines-market-in-us.html" class="button">Check it Out</a></li>
