--- a/Projects/linear-regression-analysis.html
+++ b/Projects/linear-regression-analysis.html
@@ -60,6 +60,12 @@
 
                                 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="block"> <mtable displaystyle="true"> <mlabeledtr> <mtd id="mjx-eqn-1"> <mtext></mtext> </mtd> <mtd> <mi>Y</mi> <mo>=</mo> <msub> <mi>β<!-- ?? --></mi> <mn>0</mn> </msub> <mo>+</mo> <msub> <mi>β<!-- ?? --></mi> </msub> <mi>X</mi> <mo>+</mo> <mi>ϵ<!-- ?? --></mi> </mtd> </mlabeledtr> </mtable> </math></p>
                                 <p>Where:</p>
+                                <p>Y represents the dependent (response) variable.</p>
+                                <p>X represents the independent (predictor) variable.</p>
+                                <p><strong><span class="math inline">\({\beta}_0\)</span></strong> represents the intercept (the value of Y when X = Zero).</p>
+                                <p><strong><span class="math inline">\({\beta}_1\)</span></strong> is the coefficient (slope term) representing the linear relationship.</p>
+                                <p><strong><span class="math inline">\(\epsilon\)</span></strong> represents the error term (Normally distributed/Constant Variance).</p>
+ 
 
 
 
