--- a/Projects/visualisation-of-oil-production.html
+++ b/Projects/visualisation-of-oil-production.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Analysis of Airlines Market in US</title>
+		<title>Visualisation of Oil Production</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
