--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<span class="date">November, 2020</span>
 										<h2><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html">Visualisation of Oil Production</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/us-oil-production.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="button">Check it Out</a></li>
