--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">November, 2020</span>
+										<span class="date">November 24, 2020</span>
 										<h2><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html">Visualisation of Oil Production</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/us-oil-production.png" alt="" /></a>
