--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Portfolio</a>
+						<a href="../ramikhrais.github.io/index.html" class="logo">Portfolio</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is My Works</a></li>
+							<li class="active"><a href="../ramikhrais.github.io/index.html">This is My Works</a></li>
 							<!-- <li><a href="generic.html">Generic Page</a></li> -->
 							<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
