--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<h2><a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html">Brief Introduction to Time Series Analysis<br />
 									</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/time-series.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="button">Check it Out</a></li>
