--- a/index.html
+++ b/index.html
@@ -65,66 +65,89 @@
 							</article>
 
 						<!-- Posts -->
+
 							<section class="posts">
+
+								<!-- --------------------------- -->
+
 								<article>
 									<header>
 										<span class="date">November 22, 2020</span>
 										<h2><a href="./Projects/analysis-of-airlines-market-in-us.html">Analysis of Airlines Market in US<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/average-delay-departure.png" alt="" /></a>
+									<a href="../ramikhrais.github.io/Projects/analysis-of-airlines-market-in-us.html" class="image fit"><img src="../ramikhrais.github.io/images/average-delay-departure.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/analysis-of-airlines-market-in-us.html" class="button">Check it Out</a></li>
 									</ul>
 								</article>
+
+								<!-- ---------------------- -->
+
+
 								<article>
 									<header>
 										<span class="date">November 23, 2020</span>
 										<h2><a href="../ramikhrais.github.io/Projects/linear-regression-analysis.html">Linear Regression Analysis: Estimation of the Aggregate Consumption Equation<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/residual-analysis.png" alt="" /></a>
+									<a href="./Projects/linear-regression-analysis.html" class="image fit"><img src="../ramikhrais.github.io/images/residual-analysis.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Check it Out</a></li>
+										<li><a href="./Projects/linear-regression-analysis.html" class="button">Check it Out</a></li>
 									</ul>
 								</article>
+
+								<!-- ------------------------------- -->
+
 								<article>
 									<header>
 										<span class="date">November 24, 2020</span>
 										<h2><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html">Visualisation of Oil Production</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/us-oil-production.png" alt="" /></a>
+									<a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="image fit"><img src="../ramikhrais.github.io/images/us-oil-production.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="button">Check it Out</a></li>
 									</ul>
 								</article>
+
+								<!-- ---------------------------- -->
+
 								<article>
 									<header>
 										<span class="date">November 24, 2020</span>
 										<h2><a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html">Brief Introduction to Time Series Analysis<br />
 									</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/time-series.png" alt="" /></a>
+									<a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="image fit"><img src="../ramikhrais.github.io/images/time-series.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="button">Check it Out</a></li>
 									</ul>
 								</article>
+
+
+								<!-- ------------------- -->
+
+
 								<article>
 									<header>
 										<span class="date">November 24, 2020</span>
 										<h2><a href="../ramikhrais.github.io/Projects/forecasting-brent-crude-price.html">Forecasting Brent Crude Oil Price: Box-Jenkins Method<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="../ramikhrais.github.io/images/oil-price-chart.png" alt="" /></a>
+									<a href="../ramikhrais.github.io/Projects/forecasting-brent-crude-price.html" class="image fit"><img src="../ramikhrais.github.io/images/oil-price-chart.png" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/forecasting-brent-crude-price.html" class="button">Check it Out</a></li>
 									</ul>
 								</article>
+
+								<!-- --------------------------- -->
+
+
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
@@ -137,6 +160,8 @@
 										<li><a href="#" class="button">Check it Out</a></li>
 									</ul>
 								</article>
+
+
 							</section>
 
 						 <!-- Footer -->
