--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">November 20, 2020</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
+									<span class="date">November 24, 2020</span>
+									<h2><a href="./Projects/forecasting-brent-crude-price.html">Forecasting Brent Crude Oil Price: Box-Jenkins Method<br />
+									</a></h2>
 									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
 									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
 									amet nullam sed etiam veroeros.</p>
 								</header>
-								<a href="./Projects/analysis.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="./Projects/forecasting-brent-crude-price.html" class="image main"><img src="./images/oil-price-chart.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="./Projects/analysis.html" class="button large">Check it Out</a></li>
+									<li><a href="../ramikhrais.github.io/Projects/forecasting-brent-crude-price.html" class="button large">Check it Out</a></li>
 								</ul>
 							</article>
 
