--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 								<!-- ------------------- -->
 
-
+<!-- 
 								<article>
 									<header>
 										<span class="date">November 24, 2020</span>
@@ -143,11 +143,11 @@
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/forecasting-brent-crude-price.html" class="button">Check it Out</a></li>
 									</ul>
-								</article>
+								</article> -->
 
 								<!-- --------------------------- -->
 
-
+<!-- 
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
@@ -159,7 +159,7 @@
 									<ul class="actions special">
 										<li><a href="#" class="button">Check it Out</a></li>
 									</ul>
-								</article>
+								</article> -->
 
 
 							</section>
