--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 									<span class="date">November 24, 2020</span>
 									<h2><a href="./Projects/forecasting-brent-crude-price.html">Forecasting Brent Crude Oil Price: Box-Jenkins Method<br />
 									</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>In this project, I have utilized the BOX-Jenkins method<br />
+									in order to forecast the prices of Brent crude oil for six<br />
+									months ahead.</p>
 								</header>
 								<a href="./Projects/forecasting-brent-crude-price.html" class="image main"><img src="./images/oil-price-chart.png" alt="" /></a>
 								<ul class="actions special">
@@ -77,7 +77,7 @@
 										</a></h2>
 									</header>
 									<a href="../ramikhrais.github.io/Projects/analysis-of-airlines-market-in-us.html" class="image fit"><img src="../ramikhrais.github.io/images/average-delay-departure.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. The datasets that has been analysed spots the activity of 15 carries.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/analysis-of-airlines-market-in-us.html" class="button">Check it Out</a></li>
 									</ul>
@@ -93,7 +93,7 @@
 										</a></h2>
 									</header>
 									<a href="./Projects/linear-regression-analysis.html" class="image fit"><img src="../ramikhrais.github.io/images/residual-analysis.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, I have used the linear regression model in order to investigate the realtionship between the disposable income per capita and the agggregate demand in the Palestinian territories.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/linear-regression-analysis.html" class="button">Check it Out</a></li>
 									</ul>
@@ -107,7 +107,7 @@
 										<h2><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html">Visualisation of Oil Production</a></h2>
 									</header>
 									<a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="image fit"><img src="../ramikhrais.github.io/images/us-oil-production.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, I depdned on the annual dataset of BP company in order to create different type of visualisations. </p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="button">Check it Out</a></li>
 									</ul>
@@ -122,7 +122,7 @@
 									</a></h2>
 									</header>
 									<a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="image fit"><img src="../ramikhrais.github.io/images/time-series.png" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>In this project, I tried to explain the basics of the time series analysis and the technieques used for spotting their characteristics using the suitable statistical tests.</p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/brief-introduction-to-timeseries.html" class="button">Check it Out</a></li>
 									</ul>
