--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 										<h2><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html">Visualisation of Oil Production</a></h2>
 									</header>
 									<a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="image fit"><img src="../ramikhrais.github.io/images/us-oil-production.png" alt="" /></a>
-									<p>In this project, I depdned on the annual dataset of BP company in order to create different type of visualisations. </p>
+									<p>In this project, I used the annual dataset of BP company in order to create different type of visualisations. I have focused on the most common viusalisations in the industry. </p>
 									<ul class="actions special">
 										<li><a href="../ramikhrais.github.io/Projects/visualisation-of-oil-production.html" class="button">Check it Out</a></li>
 									</ul>
