--- a/Projects/forecasting-brent-crude-price.html
+++ b/Projects/forecasting-brent-crude-price.html
@@ -47,9 +47,9 @@
 									<span class="date">November 24, 2020</span>
 									<h1>Forecasting Brent Crude Oil Price: Box-Jenkins Method<br />
 									</h1>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>In this project, I have utilized the BOX-Jenkins method<br />
+                                    in order to forecast the prices of Brent crude oil for six<br />
+									months ahead.</p>
 								</header>
                                 <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
                                 
