--- a/Projects/linear-regression-analysis.html
+++ b/Projects/linear-regression-analysis.html
@@ -51,7 +51,7 @@
 									<h1>Linear Regression Analysis: Estimation of the Aggregate Consumption Equation<br />
 									</h1>
 
-									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. <br> The datasets that has been analysed is oncerning 15 carriers</p> <br>
+									<p>In this project, I have used the linear regression model in order to investigate<br>the realtionship between the disposable income per capita and the agggregate demand</p>in the Palestinian territories.<br>
 									
                                 </header>
                                 
