--- a/Projects/visualisation-of-oil-production.html
+++ b/Projects/visualisation-of-oil-production.html
@@ -47,9 +47,9 @@
 									<span class="date">November 24, 2020</span>
 									<h1>Visualisation of Oil Production<br />
 									</h1>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>In this project, I used the annual dataset of BP company<br />
+                                        in order to create different type of visualisations. I have<br />
+                                        focused on the most common viusalisations in the industry.</p>
 								</header>
                                 <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
                                 
