--- a/Projects/visualisation-of-oil-production.html
+++ b/Projects/visualisation-of-oil-production.html
@@ -48,8 +48,8 @@
 									<h1>Visualisation of Oil Production<br />
 									</h1>
 									<p>In this project, I used the annual dataset of BP company<br />
-                                        in order to create different type of visualisations. I have<br />
-                                        focused on the most common viusalisations in the industry.</p>
+                                        in order to create different types of visualisations. I have<br />
+                                        focused on the most common viusalisations used in the industry.</p>
 								</header>
                                 <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
                                 
