--- a/Projects/brief-introduction-to-timeseries.html
+++ b/Projects/brief-introduction-to-timeseries.html
@@ -49,9 +49,9 @@
 									<span class="date">November 24, 2020</span>
 									<h1>Brief Introduction to Time Series Analysis<br />
 									</h1>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<p>In this project, I tried to explain the basics of the time<br />
+                                    series analysis and the technieques used for spotting<br />
+									their characteristics using the suitable statistical tests.</p>
 								</header>
                                 <div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 
