--- a/Projects/brief-introduction-to-timeseries.html
+++ b/Projects/brief-introduction-to-timeseries.html
@@ -7,7 +7,10 @@
 <html>
 	<head>
 		<title>Brief Introduction to Time Series Analysis</title>
-		<meta charset="utf-8" />
+        <meta charset="utf-8" />
+        <meta name="description" property="og:description" content="[In this project, I tried to explain the basics of the time
+        series analysis and the technieques used for spotting
+        their characteristics using the suitable statistical tests.">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="../assets/css/obsidian.css">
