--- a/Projects/forecasting-brent-crude-price.html
+++ b/Projects/forecasting-brent-crude-price.html
@@ -7,7 +7,8 @@
 <html>
 	<head>
 		<title>Analysis of Airlines Market in US</title>
-		<meta charset="utf-8" />
+        <meta charset="utf-8" />
+        <meta name="image" property="og:image" content="https://ramikhrais.github.io/ramikhrais.github.io/images/oil-price-chart.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="..//assets/css/obsidian.css">
