--- a/Projects/forecasting-brent-crude-price.html
+++ b/Projects/forecasting-brent-crude-price.html
@@ -10,6 +10,7 @@
         <meta charset="utf-8" />
         <meta name="image" property="og:image" content="https://ramikhrais.github.io/ramikhrais.github.io/images/oil-price-chart.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+        <meta name="description" property="og:description" content="In this porject, the Box-Jenkins Method has been utilized to model the prices of brent crude oil for the period from May-1987 to Nov-2018. Five models have been simulated upon different AR and MA orders and three models of them were selected based on.">
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="..//assets/css/obsidian.css">
 		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
