--- a/Projects/forecasting-brent-crude-price.html
+++ b/Projects/forecasting-brent-crude-price.html
@@ -396,7 +396,7 @@
 
                                 <table>
                                     <thead>
-                                    <tr class="header">
+                                    <tr class="header-table">
                                     <th align="center">Model</th>
                                     <th align="center">Arima (1,1,0)</th>
                                     <th align="center">ARIMA (2,1,2)</th>
