--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<h2><a href="./Projects/analysis-of-airlines-market-in-us.html">Analysis of Airlines Market in US<br />
 										</a></h2>
 									</header>
-									<a href="../ramikhrais.github.io/Projects/analysis-of-airlines-market-in-us.html" class="image fit"><img src="../ramikhrais.github.io/images/average-delay-departure.png" alt="" /></a>
+									<a href="../ramikhrais.github.io/Projects/analysis-of-airlines-market-in-us.html" class="image fit"><img src="../ramikhrais.github.io/images/delta-airline.jpg" alt="" /></a>
 									<p>In this porject, I did analyse the most important trends in the US's airlines market in 2011. The datasets that has been analysed spots the activity of 15 carries.</p>
 									<ul class="actions special">
 										<li><a href="./Projects/analysis-of-airlines-market-in-us.html" class="button">Check it Out</a></li>
