--- a/Projects/analysis-of-airlines-market-in-us.html
+++ b/Projects/analysis-of-airlines-market-in-us.html
@@ -8,6 +8,7 @@
 	<head>
 		<title>Analysis of Airlines Market in US</title>
 		<meta charset="utf-8" />
+		<meta name="image" property="og:image" content="https://ramikhrais.github.io/ramikhrais.github.io/images/delta-airline.jpg">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 		<link rel="stylesheet" href="../assets/css/obsidian.css">
